deployment/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: xcellify-partner
  labels:
    istio-injection: disabled
