deployment/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: xcellify-partner
  namespace: xcellify-partner
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
  type: ClusterIP
  selector:
    app: xcellify-partner
