deployment/vs.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: xcellify-partner-vs
  namespace: xcellify-partner
spec:
  hosts:
  - "dev-partner.xcellify.com"
  gateways:
  - xcellify-partner-gateway
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: xcellify-partner
        port:
          number: 80
